[package]
name = "bcs"
version = "0.1.4"
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/diem/bcs"
homepage = "https://diem.com"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
proptest = "0.10"
proptest-derive = "0.2"

[[bench]]
name = "bcs_bench"
harness = false

[features]
default = ["std"]
std = [
]
